# spellcore

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
CommonUtils/: CMakeLists.txt
CommonUtils/source/FileUtils/: FileReader.h
EventSystem/: CMakeLists.txt
EventSystem/source/: EventManager.cpp  EventManager.h
EventSystem/source/BlockingEvents/: Action.h  BlockingEvent.h  EventChannel.cpp  EventChannel.h
EventSystem/source/DeferredEvents/: Event.h
Logger/: CMakeLists.txt
Logger/source/: Logger.h  LoggerManager.cpp  LoggerManager.h
RunesUI/: CMakeLists.txt
RunesUI/source/: Canvas.h
SandboxApp/: CMakeLists.txt
SandboxApp/source/: SandboxApp.cpp  SandboxApp.h  main.cpp
SandboxApp/source/Editor/Core/: Resource.h  ResourceManager.cpp  ResourceManager.h
SandboxApp/source/Editor/Core/AssetLoaders/: ObjLoader.cpp  ObjLoader.h
SandboxApp/source/Events/: UserInputChannel.h  WindowEventChannel.h
SandboxApp/source/Platform/: IPlatform.h
SandboxApp/source/Tests/IMGUITest/: ImguiTest.cpp  ImguiTest.h
SandboxApp/source/Tests/ModelLoadingTest/: ObjLoaderTest.cpp  ObjLoaderTest.h
SandboxApp/source/WindowSystem/: IWindowSystem.h
SandboxApp/source/WindowSystem/GLFW/: GLFWWindowSystem.cpp  GLFWWindowSystem.h
SpellcoreRenderer/: CMakeLists.txt  SpellcoreRenderer.vcxproj
SpellcoreRenderer/resources/DefaultShaders/: BasicSpellcoreShader.scsh
SpellcoreRenderer/source/OpenGL/: OpenGLGPUBuffer.cpp  OpenGLGPUBuffer.h  OpenGLGeometryBuffer.cpp  OpenGLGeometryBuffer.h  OpenGLObjectFactory.cpp  OpenGLObjectFactory.h  OpenGLRenderQueue.cpp  OpenGLRenderQueue.h  OpenGLRenderingContext.cpp  OpenGLRenderingContext.h  OpenGLSCShaderCompiler.cpp  OpenGLSCShaderCompiler.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
SpellcoreRenderer/source/RHI/: GPUBuffer.h  GeometryBuffer.h  IRendererBackendFactory.h  IRenderingContext.cpp  IRenderingContext.h  ISCShaderCompiler.h  IShaderProgram.cpp  IShaderProgram.h  ITexture.h  IndexBuffer.h  RendereQueue.h  VertexArray.h  VertexBuffer.h
SpellcoreRenderer/source/Utils/: FileReader.cpp
SpellcoreRenderer/source/core/: BufferLayout.h  GPUBufferLayout.h  Material.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  RenderPipeline.cpp  RenderPipeline.h  RenderingBackend.h  RenderingSurfaceCreateInfo.h  Resource.h  ResourceManager.h  ShaderDataType.h  SpellcoreRenderer.cpp  SpellcoreRenderer.h  SpellcoreShader.cpp  SpellcoreShader.h
ThirdPartyLibs/: CMakeLists.txt
